--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vuetify": "^3.6.8"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
