--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.6.8"
+    "vuetify": "^3.6.8",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
