--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/rxjs": "^10.10.0",
     "dexie": "^4.0.7",
     "filesize": "^10.1.2",
+    "unzipit": "^1.4.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vuetify": "^3.6.8",
