--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.10.0",
+    "@vueuse/integrations": "^10.11.0",
     "@vueuse/rxjs": "^10.10.0",
     "dexie": "^4.0.7",
     "filesize": "^10.1.2",
+    "universal-cookie": "^6.1.3",
     "unzipit": "^1.4.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
