--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "unzipit": "^1.4.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.6.8",
-    "vuex": "^4.0.2"
+    "vuetify": "^3.6.8"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
