--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/rxjs": "^10.10.0",
     "dexie": "^4.0.7",
     "filesize": "^10.1.2",
+    "pinia": "^2.1.7",
     "universal-cookie": "^6.1.3",
     "unzipit": "^1.4.3",
     "vue": "^3.4.21",
